# nami

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
configs/: default.yaml
configs/examples/: filter_sweep.yaml  reverb_send.yaml
extensions/smoothing_ext/: README.md
scripts/: list_midi_ports.py
src/nami/: __init__.py  __main__.py  cli.py  config.py
src/nami/engine/: diagnostics.py  loop.py
src/nami/mapping/: curves.py  mapper.py  smoothing.py
src/nami/midi/: port.py  sender.py
src/nami/tracking/: capture.py  geometry.py  hands.py
tests/: conftest.py
tests/mapping/: test_curves.py  test_smoothing.py
tests/midi/: test_sender.py
tests/tracking/: test_geometry.py
